--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "locaca-sala",
+  "name": "expert-booking",
   "version": "1.0.0",
-  "description": "sistema locacao salas",
-  "main": "index.js",
+  "description": "Sistema de reserva de salas",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "dev",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "seed": "node src/scripts/seedDatabase.js"
   },
   "author": "hiramsonn",
   "license": "ISC",
@@ -17,9 +19,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.8.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
-    "nodemon": "^3.1.10",
     "prisma": "^6.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
